# duper_cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: duplicate_files.rs  found_file.rs  lib.rs  opts.rs
test_data/: non_dup.txt  non_dup_two.txt
test_data/nested_test_dir/: non_dup_match_size.txt  non_dup_match_size_pair.txt  unknown_file
tests/: duper_cli.rs
