[package]
name = "duper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
walkdir = "2.3.2"
md-5 = "0.10.5"
hex-literal = "0.3.4"
colored = "2.0.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
assert_fs = "1.0.13"
